[Fixes #59801758] - QR Code Management View Uses Wrong Master Template
Turns out it just wasn't including all of the css it needed.
Also added a little bit to the global style to make the manage qrcode page not look as shitty.

--- a/web/knotis/contrib/layout/static/knotis/layout/css/global.css
+++ b/web/knotis/contrib/layout/static/knotis/layout/css/global.css
@@ -20,6 +20,12 @@
     margin-left: 15px;
 }
 
+div.container-fluid div.row-fluid div.content {
+    background-color: #fff;
+    margin: 16px;
+    padding: 16px;
+}
+
 /*
   Bootstrap Overrides
 */
